# MyProject

./: Project1.sln  README.md
Project1/: AbstractImageProcessor.h  CMakeLists - 복사본 (2).txt  CMakeLists - 복사본 (3).txt  CMakeLists - 복사본 (4).txt  CMakeLists - 복사본.txt  CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  ImageProcessorCUDA.cpp  ImageProcessorCUDA.h  ImageProcessorCUDAKernel.cpp  ImageProcessorCUDAKernel.h  ImageProcessorGStreamer.cpp  ImageProcessorGStreamer.h  ImageProcessorIPP.cpp  ImageProcessorNPP.cpp  ImageProcessorNPP.h  ImageProcessorOpenCV.cpp  ImageProcessorOpenCV.h  ImageTypeConverter.cpp  ImageTypeConverter.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Project1.lnk  Project1.vcxproj  Project1.vcxproj.filters  addition.h  average.cpp  average.h  imageProcessing.cpp  imageProcessing.cu  imageProcessing.cuh  imageProcessorIPP.h  main.cpp  ui_MainWindow.h  ui_yolov5_result.h  yolov5_result.ui  yolov5dialog.cpp  yolov5dialog.h
Project1/imageProcessingLib/: CMakeLists.txt  ImageProcessingLib.cpp  ImageProcessingLib.h  dllmain.cpp  framework.h  imageProcessingLib.vcxproj  imageProcessingLib.vcxproj.filters  pch.h
